--- a/01-first-azure-pipeline.yml
+++ b/01-first-azure-pipeline.yml
@@ -5,7 +5,7 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- script: echo Hello, world!
+- script: echo Hello, Eri!
   displayName: 'Run a one-line script'
 
 - script: |
