--- a/01-first-azure-pipeline.yml
+++ b/01-first-azure-pipeline.yml
@@ -4,11 +4,21 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-steps:
-- script: echo Hello, Eri!
-  displayName: 'Run a one-line script'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+jobs:
+- job: Job1
+
+  steps:
+  - script: echo Hello, Eri!
+    displayName: 'Run a one-line script'
+
+  - script: |
+      echo Add other tasks to build, test, and deploy your project.
+      echo See https://aka.ms/yaml
+    displayName: 'Run a multi-line script'
+
+- job: job2
+
+  steps:
+    - script: echo Job2!
+      displayName: 'Run a one-line script'
