--- a/01-first-azure-pipeline.yml
+++ b/01-first-azure-pipeline.yml
@@ -18,7 +18,15 @@ jobs:
     displayName: 'Run a multi-line script'
 
 - job: job2
+  dependsOn: Job1
 
   steps:
     - script: echo Job2!
+      displayName: 'Run a one-line script'
+
+- job: job3
+  dependsOn: Job2
+
+  steps:
+    - script: echo Job3!
       displayName: 'Run a one-line script'
