--- a/02-understanding-stages.yml
+++ b/02-understanding-stages.yml
@@ -9,7 +9,7 @@ stages:
     jobs:
     - job: FirstJob
       steps:
-      - bash: echo Build / First Job
+      - bash: echo $(PipelineLevelVariable)
   
     - job: SecondJob
       steps:
@@ -17,23 +17,29 @@ stages:
 
   - stage: DevDeploy
     dependsOn: Build
+    variables:
+      environment: DevDeploy
     jobs:
       - job: FirstJob
         steps:
-        - bash: echo DevDeploy / First Job
+        - bash: echo $(environment) / First Job
   
   - stage: QADeploy
     dependsOn: Build
+    variables:
+      environment: QADeploy
     jobs:
       - job: FirstJob
         steps:
-        - bash: echo QADeploy / First Job
+        - bash: echo $(environment) / First Job
     
   - stage: ProdDeply
     dependsOn:
     - DevDeploy
     - QADeploy
+    variables:
+      environment: ProdDeply
     jobs:
       - job: FirstJob
         steps:
-        - bash: echo ProdDeply / First Job
+        - bash: echo $(environment) / First Job
